# python-kiteclient

./: .coveragerc  .gitreview  CONTRIBUTING.rst  HACKING.rst  README.md  README.rst  openstack-common.conf  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/source/: conf.py  index.rst  installation.rst  usage.rst
kiteclient/: __init__.py  cli.py  client.py  transport.py
kiteclient/cli/: v1.py
kiteclient/common/: meta_data.py  resource.py
kiteclient/openstack/common/: _i18n.py  excutils.py  fileutils.py  gettextutils.py  importutils.py  jsonutils.py  lockutils.py  log.py  strutils.py
kiteclient/openstack/common/cache/: cache.py
kiteclient/openstack/common/cache/_backends/: memory.py
kiteclient/openstack/common/crypto/: utils.py
kiteclient/tests/: base.py  test_kiteclient.py
kiteclient/tests/v1/: test_esek.py  test_group.py  test_key.py  test_ticket.py  utils.py
kiteclient/v1/: __init__.py  esek.py  group.py  key.py  ticket.py
scripts/: basic.py  group.py
scripts/demo-client/: client.py  main.py  transport.py
