[metadata]
name = python-kiteclient
summary = Interacting with the kite server
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[files]
packages =
    kiteclient

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = kiteclient/locale
domain = python-kiteclient

[update_catalog]
domain = python-kiteclient
output_dir = kiteclient/locale
input_file = kiteclient/locale/python-kiteclient.pot

[entry_points]
openstack.cli.extension =
    kds = kiteclient.cli.v1

openstack.kds.v1 =
    key_set = kiteclient.cli.v1:KeySet
    keygroup_create = kiteclient.cli.v1:GroupCreate
    keygroup_delete = kiteclient.cli.v1:GroupDelete
    
[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = kiteclient/locale/python-kiteclient.pot